# AI-Study

./: .gitignore  README.md
week7/basic/: README.md  pyproject.toml  train.py
week7/basic/wandb/: latest-run
week7/basic/wandb/run-20250515_170136-uvsqagsv/: run-uvsqagsv.wandb
week7/basic/wandb/run-20250515_170136-uvsqagsv/files/: config.yaml  wandb-metadata.json
week7/basic/wandb/run-20250515_170502-d1jx7hey/: run-d1jx7hey.wandb
week7/basic/wandb/run-20250515_170502-d1jx7hey/files/: config.yaml  wandb-metadata.json  wandb-summary.json
week7/basic/wandb/run-20250515_170607-y6m31m4v/: run-y6m31m4v.wandb
week7/basic/wandb/run-20250515_170607-y6m31m4v/files/: requirements.txt  wandb-metadata.json  wandb-summary.json
week7/basic/wandb/run-20250515_170851-i1xovacl/: run-i1xovacl.wandb
week7/basic/wandb/run-20250515_170851-i1xovacl/files/: wandb-metadata.json  wandb-summary.json
week7/basic/wandb/run-20250515_174500-dlz2r63d/: run-dlz2r63d.wandb
week7/basic/wandb/run-20250515_174500-dlz2r63d/files/: config.yaml  requirements.txt  wandb-metadata.json
week7/basic/wandb/run-20250515_174547-idf2spn8/: run-idf2spn8.wandb
week7/basic/wandb/run-20250515_174547-idf2spn8/files/: wandb-metadata.json
week7/basic/wandb/run-20250515_175856-utqwpee5/: run-utqwpee5.wandb
week7/basic/wandb/run-20250515_175856-utqwpee5/files/: config.yaml  wandb-metadata.json
week7/basic/wandb/run-20250515_180421-z0gu6pg3/: run-z0gu6pg3.wandb
week7/basic/wandb/run-20250515_180421-z0gu6pg3/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
(+17 files in other folders)
