[project]
name = "basic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.26.0",
    "datasets>=3.6.0",
    "evaluate>=0.4.3",
    "numpy>=2.2.5",
    "torch>=2.7.0",
    "transformers>=4.51.3",
    "wandb>=0.19.11",
]
